--- a/css/main.scss
+++ b/css/main.scss
@@ -7,8 +7,6 @@ $thetransition: all .5s cubic-bezier(1,.25,0,.75) 0s;
     src: url('../fonts/Comfortaa-VariableFont_wght.ttf') format('truetype'); /* IE9 Compat Modes */
 }
 
-
-
 * {
     margin: 0;
     padding: 0;
@@ -36,8 +34,6 @@ header {
     height: 6em;
     box-shadow: 0px 6px 8px $shadow;
 }
-
-
 
 nav {
     height: 100%;
@@ -105,7 +101,7 @@ main {
 
         h1 {
             font-family: 'Playfair Display', serif;
-            font-size: 4vw;
+            font-size: 9vw;
             color: white;
             mix-blend-mode: screen;
 
@@ -133,12 +129,11 @@ main {
             }
         }
         sub {
-            font-size: 1.2vw;
+            font-size: 3.2vw;
         }
     }
 
     section.mission {
-        margin-top: 10em;
         margin-bottom: 10em;
         padding: 5em 3em;
         background-color: white;
@@ -167,13 +162,14 @@ main {
 
         div {
             position: relative;
-            width: 60vw;
+            width: 95vw;
             display: flex;
             flex-grow: 1;
             justify-content: center;
             flex-direction: row;
             p {
                 padding: 2em;
+                font-size: 1.2em;
                 width: 50%;
             }
             img {
@@ -198,6 +194,10 @@ main {
             width: 50vw;
         }
     }
+}
+
+p {
+    font-size: 1.2em;
 }
 
 input[type=text], select, textarea {
