--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ footer {
   position: relative;
   height: 500px;
   overflow: hidden;
-  color: white;
+  color: rgba(255, 255, 255, 0.7);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -247,6 +247,53 @@ footer .contained {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-bottom: 2em;
+}
+
+footer .contained section:first-child {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+}
+
+footer .contained section:first-child .footer-section h5 {
+  margin-bottom: 0.8em;
+}
+
+footer .contained section:first-child .footer-section ul {
+  list-style-type: none;
+}
+
+footer .contained section:first-child .footer-section ul li {
+  font-size: 0.8em;
+  line-height: 1.5em;
+}
+
+footer .contained section:first-child .footer-section ul li a {
+  color: rgba(255, 255, 255, 0.7);
+  text-decoration: none;
+}
+
+footer .contained section:first-child .footer-section:last-child {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / span 2;
+}
+
+footer .contained section p {
+  font-size: 0.8em;
 }
 
 footer img {
