--- a/css/style.scss
+++ b/css/style.scss
@@ -89,51 +89,63 @@ header {
     display: flex;
     align-items: center;
     box-shadow: $shadow;
-
-    .banner {
+    transform: translateY(-30px) skewY(1deg);
+    overflow: hidden;
+    
+    .header-container {
+        position: relative;
         height: 100%;
-        width: 6em;
-        margin-left: 2em;
-        background-color: $primaryColor;
+        width: 100%;
         display: flex;
         align-items: center;
-        justify-content: flex-start;
+        transform: skewY(-1deg);
+        overflow: hidden;
 
-        h1 {
-            color: $primaryColorHighlight;
-            font-size: 5em;
-            transform: rotate(-90deg) translateY(-30px);
+        .banner {
+            height: 100%;
+            width: 6em;
+            margin-left: 2em;
+            background-color: $primaryColor;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+    
+            h1 {
+                color: $primaryColorHighlight;
+                font-size: 5em;
+                transform: rotate(-90deg) translateY(-30px);
+            }
         }
-    }
-
-    .company {
-        z-index: 1;
-        margin-left: 2em;
-        h1 {
-            font-size: 4.3em;
-            line-height: 0.9em;
+    
+        .company {
+            z-index: 1;
+            margin-left: 2em;
+            h1 {
+                font-size: 4.3em;
+                line-height: 0.9em;
+            }
+            sub {
+                color: $secondaryColor;
+                font-size: 1.3em;
+            }
         }
-        sub {
-            color: $secondaryColor;
-            font-size: 1.3em;
+    
+        #headerImg {
+            position: absolute;
+            right: 1em;
+            width: 40%;
+            z-index: 0;
         }
-    }
-
-    #headerImg {
-        position: absolute;
-        right: 1em;
-        width: 40%;
-        z-index: 0;
-    }
-
-    .bottom {
-        position: absolute;
-        width: 100%;
-        left: 0;
-        bottom: 2em;
-        display: flex;
-        justify-content: center;
-    }
+    
+        .bottom {
+            position: absolute;
+            width: 100%;
+            left: 0;
+            bottom: 2em;
+            display: flex;
+            justify-content: center;
+        }
+    } 
 }
 
 main {
@@ -145,6 +157,8 @@ main {
             margin-bottom: 1em;
         }
     }
+
+    margin-bottom: -500px;
 }
 
 #about {
@@ -192,7 +206,7 @@ main {
 
 footer {
     position: relative;
-    height: 500px;
+    height: 840px;
     overflow: hidden;
     color: rgba(255, 255, 255, 0.7);
     display: flex;
@@ -248,8 +262,8 @@ footer {
     img {
         z-index: -1;
         position: absolute;
-        top: -340px;
-        left: -450px;
+        top: 0px;
+        left: -350px;
     }
 }
 
