Put send button in the middle

--- a/css/style.css
+++ b/css/style.css
@@ -355,6 +355,16 @@ footer img {
   padding: 2em;
 }
 
+.form-bottom {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 input[type=text], select, textarea {
   font-family: 'Comforta';
   width: 100%;
