--- a/css/animation.scss
+++ b/css/animation.scss
@@ -36,6 +36,10 @@
     animation: breathe-arm-right 4s ease-in-out 400ms infinite;
 }
 
+#shadowman {
+    animation: breathe-head-shadow 4s ease-in-out 400ms infinite;
+}
+
 @keyframes breathe-arm-right {
     0% {
         transform: translate(103.231px, 62.408px)
@@ -105,6 +109,30 @@
     }
     100% {
         transform: rotate(0) translateY(0px);
+    }
+}
+
+@keyframes breathe-head-shadow {
+    0% {
+        transform: translate(-181.255px, 98.807px);
+    }
+    30% {
+        transform: translate(-184.255px, 98.807px);
+    }
+    40% {
+        transform: translate(-178.255px, 98.807px);
+    }
+    50% {
+        transform: translate(-183.255px, 98.807px);
+    }
+    60% {
+        transform: translate(-179.255px, 98.807px);
+    }
+    70% {
+        transform: translate(-184.255px, 98.807px);
+    }
+    100% {
+        transform: translate(-181.255px, 98.807px);
     }
 }
 
