--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,8 @@ header .header-container .company sub {
 header .header-container #headerImg {
   position: absolute;
   right: 1em;
-  width: 40%;
+  width: 55%;
+  height: auto;
   z-index: 0;
 }
 
@@ -214,9 +215,9 @@ main section h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -225,6 +226,10 @@ main section h2 {
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: center;
+}
+
+#whoAreWe article p {
+  line-height: 1.6em;
 }
 
 #whoAreWe article img {
@@ -245,6 +250,7 @@ main section h2 {
 }
 
 footer {
+  z-index: -1;
   position: relative;
   height: 840px;
   overflow: hidden;
@@ -258,6 +264,7 @@ footer {
 }
 
 footer .contained {
+  width: 100%;
   bottom: 2em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -316,6 +323,7 @@ footer .contained section:first-child .footer-section:last-child {
 
 footer .contained section p {
   font-size: 0.8em;
+  line-height: 1.5em;
 }
 
 footer img {
@@ -326,7 +334,7 @@ footer img {
 }
 
 .contained {
-  width: 1000px;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
 }
