--- a/css/animation.css
+++ b/css/animation.css
@@ -1,3 +1,6 @@
+/*
+Arrow header animations
+*/
 .svg-arrow {
   -webkit-animation: pointingArrow 3s ease-in-out infinite;
           animation: pointingArrow 3s ease-in-out infinite;
@@ -8,6 +11,69 @@
           animation: pointingCircle 3s ease-in-out 200ms infinite;
 }
 
+@-webkit-keyframes pointingCircle {
+  0% {
+    -webkit-transform: translate(36.811px, 0);
+            transform: translate(36.811px, 0);
+  }
+  50% {
+    -webkit-transform: translate(36.811px, 2em);
+            transform: translate(36.811px, 2em);
+  }
+  100% {
+    -webkit-transform: translate(36.811px, 0);
+            transform: translate(36.811px, 0);
+  }
+}
+
+@keyframes pointingCircle {
+  0% {
+    -webkit-transform: translate(36.811px, 0);
+            transform: translate(36.811px, 0);
+  }
+  50% {
+    -webkit-transform: translate(36.811px, 2em);
+            transform: translate(36.811px, 2em);
+  }
+  100% {
+    -webkit-transform: translate(36.811px, 0);
+            transform: translate(36.811px, 0);
+  }
+}
+
+@-webkit-keyframes pointingArrow {
+  0% {
+    -webkit-transform: translate(-897.189px, -965px);
+            transform: translate(-897.189px, -965px);
+  }
+  50% {
+    -webkit-transform: translate(-897.189px, calc(-965px + 2em));
+            transform: translate(-897.189px, calc(-965px + 2em));
+  }
+  100% {
+    -webkit-transform: translate(-897.189px, -965px);
+            transform: translate(-897.189px, -965px);
+  }
+}
+
+@keyframes pointingArrow {
+  0% {
+    -webkit-transform: translate(-897.189px, -965px);
+            transform: translate(-897.189px, -965px);
+  }
+  50% {
+    -webkit-transform: translate(-897.189px, calc(-965px + 2em));
+            transform: translate(-897.189px, calc(-965px + 2em));
+  }
+  100% {
+    -webkit-transform: translate(-897.189px, -965px);
+            transform: translate(-897.189px, -965px);
+  }
+}
+
+/*
+Header Image animation
+*/
 #footleft {
   -webkit-animation: moveFoot 2s ease-in-out 200ms infinite;
           animation: moveFoot 2s ease-in-out 200ms infinite;
@@ -353,66 +419,6 @@
   100% {
     -webkit-transform: translate(0px, -1.51px) rotate(0deg);
             transform: translate(0px, -1.51px) rotate(0deg);
-  }
-}
-
-@-webkit-keyframes pointingCircle {
-  0% {
-    -webkit-transform: translate(36.811px, 0);
-            transform: translate(36.811px, 0);
-  }
-  50% {
-    -webkit-transform: translate(36.811px, 2em);
-            transform: translate(36.811px, 2em);
-  }
-  100% {
-    -webkit-transform: translate(36.811px, 0);
-            transform: translate(36.811px, 0);
-  }
-}
-
-@keyframes pointingCircle {
-  0% {
-    -webkit-transform: translate(36.811px, 0);
-            transform: translate(36.811px, 0);
-  }
-  50% {
-    -webkit-transform: translate(36.811px, 2em);
-            transform: translate(36.811px, 2em);
-  }
-  100% {
-    -webkit-transform: translate(36.811px, 0);
-            transform: translate(36.811px, 0);
-  }
-}
-
-@-webkit-keyframes pointingArrow {
-  0% {
-    -webkit-transform: translate(-897.189px, -965px);
-            transform: translate(-897.189px, -965px);
-  }
-  50% {
-    -webkit-transform: translate(-897.189px, calc(-965px + 2em));
-            transform: translate(-897.189px, calc(-965px + 2em));
-  }
-  100% {
-    -webkit-transform: translate(-897.189px, -965px);
-            transform: translate(-897.189px, -965px);
-  }
-}
-
-@keyframes pointingArrow {
-  0% {
-    -webkit-transform: translate(-897.189px, -965px);
-            transform: translate(-897.189px, -965px);
-  }
-  50% {
-    -webkit-transform: translate(-897.189px, calc(-965px + 2em));
-            transform: translate(-897.189px, calc(-965px + 2em));
-  }
-  100% {
-    -webkit-transform: translate(-897.189px, -965px);
-            transform: translate(-897.189px, -965px);
   }
 }
 /*# sourceMappingURL=animation.css.map */
