--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @font-face {
-  font-family: 'Comforta';
+  font-family: "Comforta";
   src: url("../fonts/Comfortaa-VariableFont_wght.ttf") format("truetype");
-  /* IE9 Compat Modes */
 }
 
 * {
@@ -15,12 +14,12 @@ html {
   height: 100%;
   scroll-behavior: smooth;
   overflow-x: hidden;
-  background-color: #EFF8FF;
+  background-color: #eff8ff;
 }
 
 body {
   height: 100%;
-  font-family: 'Comforta';
+  font-family: "Comforta";
   color: #001237;
 }
 
@@ -79,7 +78,7 @@ nav ul a:before {
   bottom: 0;
   width: 100%;
   height: 3px;
-  background-color: #FCCA3D;
+  background-color: #fcca3d;
   -webkit-transition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s;
   transition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s;
   visibility: hidden;
@@ -123,7 +122,7 @@ header .header-container .banner {
   height: 100%;
   width: 6em;
   margin-left: 2em;
-  background-color: #5877B6;
+  background-color: #5877b6;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -136,7 +135,7 @@ header .header-container .banner {
 }
 
 header .header-container .banner h1 {
-  color: #ABBFDA;
+  color: #abbfda;
   font-size: 5em;
   -webkit-transform: rotate(-90deg) translateY(-30px);
           transform: rotate(-90deg) translateY(-30px);
@@ -153,11 +152,11 @@ header .header-container .company h1 {
 }
 
 header .header-container .company sub {
-  color: #FCCA3D;
+  color: #fcca3d;
   font-size: 1.3em;
 }
 
-header .header-container #headerImg {
+header .header-container #header-img {
   position: absolute;
   right: 1em;
   width: 55%;
@@ -211,7 +210,7 @@ main section h2 {
   line-height: 2em;
 }
 
-#whoAreWe article {
+#who-are-we article {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -228,25 +227,25 @@ main section h2 {
   text-align: center;
 }
 
-#whoAreWe article p {
+#who-are-we article p {
   line-height: 1.6em;
 }
 
-#whoAreWe article img {
+#who-are-we article img {
   width: 7em;
   height: 7em;
   border-radius: 50%;
   margin-bottom: 2em;
 }
 
-#whoAreWe article hr {
+#who-are-we article hr {
   width: 6em;
-  border: 2px solid #5877B6;
+  border: 2px solid #5877b6;
   margin: 1em 0;
 }
 
-#whoAreWe article .name {
-  color: #5877B6;
+#who-are-we article .name {
+  color: #5877b6;
 }
 
 footer {
@@ -373,14 +372,17 @@ footer img {
           justify-content: center;
 }
 
-input[type=text], select, textarea {
-  font-family: 'Comforta';
+input[type="text"],
+select,
+textarea {
+  font-family: "Comforta";
+  font-size: 1em;
   width: 100%;
   padding: 1em 1em;
   margin: 1em 0;
   display: inline-block;
   border-radius: 8px;
-  border: 1px solid #ABBFDA;
+  border: 1px solid #abbfda;
   -webkit-box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.1);
           box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.1);
   -webkit-box-sizing: border-box;
@@ -388,13 +390,14 @@ input[type=text], select, textarea {
 }
 
 button {
-  font-family: 'Comforta';
+  font-family: "Comforta";
+  font-size: 1em;
   background-color: transparent;
-  color: #5877B6;
-  border: 3px solid #5877B6;
+  color: #5877b6;
+  border: 3px solid #5877b6;
   border-radius: 8px;
   padding: 1em 5em;
-  margin: 8px 0;
+  margin: 1em 0;
   cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
