--- a/css/style.scss
+++ b/css/style.scss
@@ -12,7 +12,7 @@ $thetransition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s;
 
 @font-face {
     font-family: "Comforta";
-    src: url("../fonts/Comfortaa-VariableFont_wght.ttf") format("truetype");
+    src: url("../fonts/comfortaa-variable-font_wght.ttf") format("truetype");
 }
 
 * {
@@ -49,37 +49,41 @@ nav {
         align-items: center;
         list-style: none;
 
-        a {
+        li {
             position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: all ease-in-out 300ms;
-            padding: 0 2em;
             height: 100%;
-            text-decoration: none;
-            color: black;
 
-            &:hover:before,
-            &.active:before {
-                visibility: visible;
-                -webkit-transform: scaleX(1);
-                transform: scaleX(1);
-            }
+            a {
+                display: flex;
+                height: 100%;
+                justify-content: center;
+                align-items: center;
+                transition: all ease-in-out 300ms;
+                padding: 0 2em;
+                text-decoration: none;
+                color: black;
 
-            &:before {
-                content: "";
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                width: 100%;
-                height: 3px;
-                background-color: $secondaryColor;
-                -webkit-transition: $thetransition;
-                transition: $thetransition;
-                visibility: hidden;
-                -webkit-transform: scaleX(0);
-                transform: scaleX(0);
+                &:hover:before,
+                &.active:before {
+                    visibility: visible;
+                    -webkit-transform: scaleX(1);
+                    transform: scaleX(1);
+                }
+    
+                &:before {
+                    content: "";
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    width: 100%;
+                    height: 3px;
+                    background-color: $secondaryColor;
+                    -webkit-transition: $thetransition;
+                    transition: $thetransition;
+                    visibility: hidden;
+                    -webkit-transform: scaleX(0);
+                    transform: scaleX(0);
+                }
             }
         }
     }
@@ -204,7 +208,7 @@ main {
             margin: 1em 0;
         }
 
-        .name {
+        h4 {
             color: $primaryColor;
         }
     }
@@ -227,7 +231,7 @@ footer {
         justify-content: space-between;
         margin-bottom: 2em;
 
-        section:first-child {
+        .footer-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-template-rows: 1fr 1fr;
@@ -260,7 +264,7 @@ footer {
             }
         }
 
-        section {
+        div {
             p {
                 font-size: 0.8em;
                 line-height: 1.5em;
@@ -315,8 +319,15 @@ textarea {
     display: inline-block;
     border-radius: 8px;
     border: 1px solid $primaryColorHighlight;
-    box-shadow: inset 1px 2px 3px $shadowColor;
+    box-shadow: inset 2px 3px 4px $shadowColor;
     box-sizing: border-box;
+    transition: all 200ms ease-in-out;
+
+    &:focus {
+        outline: none;
+        border: 1px solid $secondaryColor;
+        box-shadow: inset 1px 2px 3px $shadowColor;
+    }
 }
 
 button {
@@ -329,4 +340,10 @@ button {
     padding: 1em 5em;
     margin: 1em 0;
     cursor: pointer;
+    transition: all 200ms ease-out;
+
+    &:hover {
+        color: $secondaryColor;
+        border: 3px solid $secondaryColor;
+    }
 }
