--- a/css/style.scss
+++ b/css/style.scss
@@ -354,7 +354,6 @@ button {
 
     &:focus {
         outline: none;
-        color: $secondaryColor;
-        border: 3px solid $secondaryColor;
+        box-shadow: 0px 0px 5px $primaryColor;
     }
 }
