--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ html {
 
 body {
   height: 100%;
-  font-family: "Comforta";
+  font-family: "Comforta", sans-serif;
   color: #001237;
 }
 
@@ -37,6 +37,7 @@ nav {
   left: 0;
   z-index: 20;
   width: 100%;
+  max-width: 1920px;
   height: 5em;
 }
 
@@ -117,70 +118,118 @@ header {
 
 header .header-container {
   position: relative;
+  padding: 0 1em;
   height: 100%;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-transform: skewY(-1deg);
           transform: skewY(-1deg);
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: minmax(60px, 6%) 40% 17% 37%;
+      grid-template-columns: minmax(60px, 6%) 40% 17% 37%;
+  -ms-grid-rows: (minmax(285px, 1fr))[auto-fill] 10%;
+      grid-template-rows: repeat(auto-fill, minmax(285px, 1fr)) 10%;
   overflow: hidden;
 }
 
 header .header-container .banner {
-  height: 100%;
-  width: 6em;
-  margin-left: 2em;
+  z-index: 1;
+  -ms-grid-column: 1;
+  grid-column: 1;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  grid-row: 1 / 4;
   background-color: #5877b6;
+}
+
+header .header-container .banner-text {
+  z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-grid-column: 1;
+  grid-column: 1;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
 }
 
-header .header-container .banner h1 {
+header .header-container .banner-text h1 {
   color: #abbfda;
-  font-size: 5em;
-  -webkit-transform: rotate(-90deg) translateY(-30px);
-          transform: rotate(-90deg) translateY(-30px);
+  font-size: 4.8vw;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
 }
 
 header .header-container .company {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   z-index: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / 4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
   margin-left: 2em;
 }
 
-header .header-container .company h1 {
-  font-size: 4.3em;
+header .header-container .company h2 {
+  font-size: 4vw;
   line-height: 0.9em;
 }
 
 header .header-container .company sub {
   color: #fcca3d;
-  font-size: 1.3em;
+  font-size: 1.5vw;
 }
 
-header .header-container #header-img {
-  position: absolute;
-  right: 1em;
-  width: 55%;
+header .header-container .illustration {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  width: 100%;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-column: 3 / 5;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+}
+
+header .header-container .illustration svg {
+  width: 100%;
   height: auto;
-  z-index: 0;
 }
 
 header .header-container .bottom {
-  position: absolute;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-column: 1 / 5;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3 / 4;
   width: 100%;
-  left: 0;
-  bottom: 2em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -189,8 +238,13 @@ header .header-container .bottom {
           justify-content: center;
 }
 
+header .header-container .bottom svg {
+  height: 100%;
+  width: auto;
+}
+
 main {
-  margin: 0 2em -500px 2em;
+  margin: 0 1em -500px 1em;
   margin-bottom: -500px;
 }
 
@@ -256,7 +310,7 @@ footer {
   z-index: -1;
   position: relative;
   height: 840px;
-  padding: 0 2em;
+  padding: 0 1em;
   overflow: hidden;
   color: rgba(255, 255, 255, 0.7);
   display: -webkit-box;
@@ -289,7 +343,7 @@ footer .contained .footer-grid {
       grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 
 footer .contained .footer-grid .footer-section h5 {
@@ -327,7 +381,7 @@ footer .contained .footer-grid .footer-section:last-child {
 }
 
 footer .contained .footer-copyright {
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 
 footer .contained .footer-copyright p {
@@ -430,5 +484,50 @@ button:focus {
   outline: none;
   -webkit-box-shadow: 0px 0px 5px #5877b6;
           box-shadow: 0px 0px 5px #5877b6;
+}
+
+@media only screen and (max-width: 1024px) {
+  nav {
+    display: none;
+  }
+  header .header-container .banner-text {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+  }
+  header .header-container .banner-text h1 {
+    font-size: 3em;
+  }
+  header .header-container .company {
+    z-index: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 3;
+    grid-column: 2 / 5;
+    -ms-grid-row: 1;
+    grid-row: 1;
+    margin-left: 1em;
+  }
+  header .header-container .company h2 {
+    font-size: 7vw;
+    line-height: 0.9em;
+  }
+  header .header-container .company sub {
+    color: #fcca3d;
+    font-size: 4vw;
+  }
+  header .header-container .illustration {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1 / 5;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    max-width: 700px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
