--- a/css/style.scss
+++ b/css/style.scss
@@ -36,7 +36,7 @@ html {
 
 body {
     height: 100%;
-    font-family: "Comforta";
+    font-family: "Comforta", sans-serif;
     color: $fontColorDark;
 }
 
@@ -46,6 +46,7 @@ nav {
     left: 0;
     z-index: 20;
     width: 100%;
+    max-width: 1920px;
     height: 5em;
 
     ul {
@@ -107,62 +108,86 @@ header {
 
     .header-container {
         position: relative;
+        padding: 0 1em;
         height: 100%;
         width: 100%;
-        display: flex;
-        align-items: center;
         transform: skewY(-1deg);
+        display: grid;
+        grid-template-columns: minmax(60px, 6%) 40% 17% 37%;
+        grid-template-rows: repeat(auto-fill, minmax(285px, 1fr)) 10%;
         overflow: hidden;
 
         .banner {
-            height: 100%;
-            width: 6em;
-            margin-left: 2em;
+            z-index: 1;
+            grid-column: 1;
+            grid-row: 1 / 4;
             background-color: $primaryColor;
+        }
+
+        .banner-text {
+            z-index: 2;
             display: flex;
             align-items: center;
-            justify-content: flex-start;
+            justify-content: center;
+            grid-column: 1;
+            grid-row: 1 / 3;
 
             h1 {
                 color: $primaryColorHighlight;
-                font-size: 5em;
-                transform: rotate(-90deg) translateY(-30px);
+                font-size: 4.8vw;
+                transform: rotate(-90deg);
             }
         }
 
         .company {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
             z-index: 1;
+            grid-column: 2 / 4;
+            grid-row: 1 / 3;
             margin-left: 2em;
-            h1 {
-                font-size: 4.3em;
+            h2 {
+                font-size: 4vw;
                 line-height: 0.9em;
             }
             sub {
                 color: $secondaryColor;
-                font-size: 1.3em;
+                font-size: 1.5vw;
             }
         }
 
-        #header-img {
-            position: absolute;
-            right: 1em;
-            width: 55%;
-            height: auto;
-            z-index: 0;
+        .illustration {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+            grid-column: 3 / 5;
+            grid-row: 1 / 3;
+            svg {
+                width: 100%;
+                height: auto;
+            }
         }
 
         .bottom {
-            position: absolute;
+            grid-column: 1 / 5;
+            grid-row: 3 / 4;
             width: 100%;
-            left: 0;
-            bottom: 2em;
             display: flex;
             justify-content: center;
+            svg {
+                height: 100%;
+                width: auto;
+            }
         }
     }
 }
 
 main {
+    margin: 0 1em -500px 1em;
+    margin-bottom: -500px;
     section {
         margin-top: 2em;
         h2 {
@@ -170,9 +195,6 @@ main {
             margin-bottom: 1em;
         }
     }
-
-    margin: 0 2em -500px 2em;
-    margin-bottom: -500px;
 }
 
 #about {
@@ -225,7 +247,7 @@ footer {
     z-index: -1;
     position: relative;
     height: 840px;
-    padding: 0 2em;
+    padding: 0 1em;
     overflow: hidden;
     color: rgba(255, 255, 255, 0.7);
     display: flex;
@@ -242,7 +264,7 @@ footer {
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-template-rows: 1fr 1fr;
-            margin-bottom: 2em;
+            margin-bottom: 1em;
 
             .footer-section {
                 h5 {
@@ -277,7 +299,7 @@ footer {
                 font-size: 0.8em;
                 line-height: 1.5em;
             }
-            margin-bottom: 2em;
+            margin-bottom: 1em;
         }
     }
 
@@ -361,5 +383,43 @@ button {
     &:focus {
         outline: none;
         box-shadow: 0px 0px 5px $primaryColor;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    nav {
+        display: none;
+    }
+
+    header .header-container {
+        .banner-text {
+            grid-row: 1 / 2;
+            h1 {
+                font-size: 3em;
+            }
+        }
+
+        .company {
+            z-index: 1;
+            grid-column: 2 / 5;
+            grid-row: 1;
+            margin-left: 1em;
+            h2 {
+                font-size: 7vw;
+                line-height: 0.9em;
+            }
+            sub {
+                color: $secondaryColor;
+                font-size: 4vw;
+            }
+        }
+
+        .illustration {
+            align-self: center;
+            justify-self: center;
+            grid-column: 1 / 5;
+            grid-row: 2 / 3;
+            max-width: 700px;
+        }
     }
 }
