--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -97,24 +97,23 @@ nav {
 }
 
 header {
-    position: relative;
     background-color: white;
     height: 100%;
-    display: flex;
-    align-items: center;
+    min-height: 900px;
     box-shadow: $shadow;
     transform: translateY(-30px) skewY(1deg);
     overflow: hidden;
 
     .header-container {
-        position: relative;
         padding: 0 1em;
         height: 100%;
         width: 100%;
         transform: skewY(-1deg);
         display: grid;
+        align-items: center;
+        justify-content: center;
         grid-template-columns: minmax(60px, 6%) 40% 17% 37%;
-        grid-template-rows: repeat(auto-fill, minmax(285px, 1fr)) 10%;
+        grid-template-rows: repeat(2, minmax(285px, 0.8fr)) minmax(2em, 10%);
         overflow: hidden;
 
         .banner {
@@ -122,6 +121,8 @@ header {
             grid-column: 1;
             grid-row: 1 / 4;
             background-color: $primaryColor;
+            align-self: stretch;
+            justify-self: stretch;
         }
 
         .banner-text {
@@ -140,9 +141,6 @@ header {
         }
 
         .company {
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
             z-index: 1;
             grid-column: 2 / 4;
             grid-row: 1 / 3;
@@ -158,29 +156,29 @@ header {
         }
 
         .illustration {
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
+            align-self: stretch;
             height: 100%;
             width: 100%;
             grid-column: 3 / 5;
             grid-row: 1 / 3;
             svg {
                 width: 100%;
-                height: auto;
+                height: 100%;
             }
         }
 
         .bottom {
             grid-column: 1 / 5;
             grid-row: 3 / 4;
+            height: 100%;
             width: 100%;
-            display: flex;
-            justify-content: center;
-            svg {
-                height: 100%;
-                width: auto;
+            a {
+                svg {
+                    height: 100%;
+                    width: 100%;
+                }
             }
+            
         }
     }
 }
@@ -392,6 +390,8 @@ button {
     }
 
     header .header-container {
+        grid-template-rows: minmax(240px, 1fr) 1fr minmax(2em, 10%);
+
         .banner-text {
             grid-row: 1 / 2;
             h1 {
@@ -404,6 +404,7 @@ button {
             grid-column: 2 / 5;
             grid-row: 1;
             margin-left: 1em;
+
             h2 {
                 font-size: 7vw;
                 line-height: 0.9em;
