Fixed some minor issues

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -211,6 +211,10 @@ main {
 }
 
 #who-are-we {
+    max-width: 1920px;
+    margin-left: auto;
+    margin-right: auto;
+    
     article {
         display: flex;
         justify-content: space-between;
