Updated hand animation, it was relocated

--- a/src/css/animation.scss
+++ b/src/css/animation.scss
@@ -84,13 +84,13 @@ Header Image animation
 
 @keyframes breathe-hand {
     0% {
-        transform: translate(-342.906px, 64.204px);
+        transform: translate(-518.906 -6.796);
     }
     20% {
-        transform: rotate(-0.5deg) translate(-342.906px, 64.204px);
+        transform: rotate(-0.5deg) translate(-518.906 -6.796);
     }
     100% {
-        transform: translate(-342.906px, 64.204px);
+        transform: translate(-518.906 -6.796);
     }
 }
 
