--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -248,8 +248,8 @@ main {
 footer {
     z-index: -1;
     position: relative;
-    height: 840px;
     padding: 0 1em;
+    height: 840px;
     overflow: hidden;
     color: rgba(255, 255, 255, 0.7);
     display: flex;
@@ -305,11 +305,17 @@ footer {
         }
     }
 
-    img {
-        z-index: -1;
+    .background {
         position: absolute;
-        top: 0px;
-        left: -350px;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        z-index: -1;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+
     }
 }
 
